--- a/actions/package.json
+++ b/actions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "actions",
+  "name": "jsaction",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,12 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
-    "axios": "^1.7.2",
-    "fs-extra": "^11.2.0",
-    "unzip-stream": "^0.3.4"
-  }
+  "license": "ISC"
 }
