working unzip (saving zip doesnt work)

--- a/actions/package.json
+++ b/actions/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "axios": "^1.7.2",
+    "node-stream-zip": "^1.15.0"
+  }
 }
